--- a/src/app/cadastrar-usuario/cadastrar-usuario.page.html
+++ b/src/app/cadastrar-usuario/cadastrar-usuario.page.html
@@ -10,21 +10,21 @@
 <ion-content>
   <ion-item>
     <ion-label position="floating">Nome</ion-label>
-    <ion-input></ion-input>
+    <ion-input [(ngModel)]="usuario.nome" type="text"></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label position="floating">Email</ion-label>
-    <ion-input></ion-input>
+    <ion-input [(ngModel)]="usuario.email" type="email"></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label position="floating">Senha</ion-label>
-    <ion-input></ion-input>
+    <ion-input  [(ngModel)]="usuario.senha" type="password"></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label position="floating">Confirmar Senha</ion-label>
-    <ion-input></ion-input>
+    <ion-input  [(ngModel)]="usuario.confirmarSenha" type="password"></ion-input>
   </ion-item>
 </ion-content>
