--- a/src/app/cadastrar-usuario/cadastrar-usuario.page.html
+++ b/src/app/cadastrar-usuario/cadastrar-usuario.page.html
@@ -8,23 +8,34 @@
 </ion-header>
 
 <ion-content>
-  <ion-item>
-    <ion-label position="floating">Nome</ion-label>
-    <ion-input [(ngModel)]="usuario.nome" type="text"></ion-input>
-  </ion-item>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
 
-  <ion-item>
-    <ion-label position="floating">Email</ion-label>
-    <ion-input [(ngModel)]="usuario.email" type="email"></ion-input>
-  </ion-item>
+        <ion-item>
+          <ion-label position="floating">Nome</ion-label>
+          <ion-input [(ngModel)]="usuario.nome" type="text"></ion-input>
+        </ion-item>
 
-  <ion-item>
-    <ion-label position="floating">Senha</ion-label>
-    <ion-input  [(ngModel)]="usuario.senha" type="password"></ion-input>
-  </ion-item>
+        <ion-item>
+          <ion-label position="floating">Email</ion-label>
+          <ion-input [(ngModel)]="usuario.email" type="email"></ion-input>
+        </ion-item>
 
-  <ion-item>
-    <ion-label position="floating">Confirmar Senha</ion-label>
-    <ion-input  [(ngModel)]="usuario.confirmarSenha" type="password"></ion-input>
-  </ion-item>
+        <ion-item>
+          <ion-label position="floating">Senha</ion-label>
+          <ion-input  [(ngModel)]="usuario.senha" type="password"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Confirmar Senha</ion-label>
+          <ion-input  [(ngModel)]="usuario.confirmarSenha" type="password"></ion-input>
+        </ion-item>
+
+        <ion-button expand="full" (click)="criarUsuario();">Salvar</ion-button>
+
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  
 </ion-content>
