--- a/src/app/lista-carros/lista-carros.page.html
+++ b/src/app/lista-carros/lista-carros.page.html
@@ -17,7 +17,7 @@
 
         <ion-list>
 
-          <ion-item *ngFor="let carro of carros">
+          <ion-item *ngFor="let carro of carros" (click)="visualizarCarro(carro.id);">
             {{ carro.modelo }} - {{ carro.montadora }}
           </ion-item> 
 
