Criação da página perfil e exibição dos dados do usuario logado no menu lateral

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,23 @@
 <ion-app>
   <ion-split-pane contentId="main-content">
-    <ion-menu contentId="main-content" type="overlay">
+    <ion-menu (ionWillOpen)="pegarUsuarioLogado();" contentId="main-content" type="overlay">
       <ion-content>
         <ion-list id="inbox-list">
-          <ion-list-header>Inbox</ion-list-header>
-          <ion-note>hi@ionicframework.com</ion-note>
+          <ion-list-header>{{ usuario.nome }}</ion-list-header>
+          <ion-note>{{ usuario.email }}</ion-note>
 
           <!-- Menu toggle para fechar o menu ao fazer logout -->
-          <ion-menu-toggle>
-            <ion-button (click)="logout();">Sair</ion-button>
-          </ion-menu-toggle>
+          <ion-grid>
+            <ion-row>
+              <ion-col class="btn-logout">
+
+                <ion-menu-toggle>
+                  <ion-button (click)="logout();">Sair</ion-button>
+                </ion-menu-toggle>
+
+              </ion-col>
+            </ion-row>
+          </ion-grid>
 
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
             <ion-item (click)="selectedIndex = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" [class.selected]="selectedIndex == i">
