--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -117,3 +117,12 @@ ion-note {
 ion-item.selected {
   --color: var(--ion-color-primary);
 }
+
+// geral 
+
+ion-header ion-toolbar {
+  --background: #1a4cf0;
+  ion-title {
+      --color: #fff;
+  }
+}  
