--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
+      <!--Menu-->
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>Perfil</ion-title>
@@ -8,5 +9,34 @@
 </ion-header>
 
 <ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
 
+        <ion-item>
+          <ion-label position="floating">Nome</ion-label>
+          <ion-input [(ngModel)]="usuario.nome" type="text"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Email</ion-label>
+          <ion-input [(ngModel)]="usuario.email" type="email"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Senha</ion-label>
+          <ion-input  [(ngModel)]="usuario.senha" type="password"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Confirmar Senha</ion-label>
+          <ion-input  [(ngModel)]="usuario.confirmarSenha" type="password"></ion-input>
+        </ion-item>
+
+        <ion-button expand="full" (click)="atualizarUsuario();">Atualizar</ion-button>
+
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  
 </ion-content>
